--- a/BlazorApp1/Pages/SharedWebWorkerPage.cshtml
+++ b/BlazorApp1/Pages/SharedWebWorkerPage.cshtml
@@ -138,7 +138,7 @@ public void WwCreate()
     }
     else
     {
-        WebWorkerHelper1.send("cmdclose");
+        WebWorkerHelper1.send("CmdDisconnect");
         WebWorkerHelper1.Dispose();
 
         IsDisabled = true;
