--- a/BlazorApp1/Pages/DonationPage.cshtml
+++ b/BlazorApp1/Pages/DonationPage.cshtml
@@ -10,12 +10,12 @@
 <p>I am blazor developer, trying to contribute to blazor's future and help blazor's ecosystem/community to grow.</p>
 
 <p>I'm a 31 years old programmer with 10 years of experience, knowing c# good and English bad.</p>
-<p>July 2017 I moved from Georgia (Caucasus) to Brooklyn, USA.</p>
+<p>July 2017 I moved from Georgia (Caucasus) to Brooklyn, NY, USA.</p>
 
 <p>I just got my work authorization and am activelly looking for junior .net developer position.</p>
 <p>I do a non-IT (Uber/Lyft driver in NYC) job for 15$ per hour and am forced to work more than 50 hours week to cover all my expenses.</p>
 
-<p>I managed to start work on blazor in June (when I left previous job) and was intensively learning and coding for whole month, this time gave me basic knowledge and good experience, in August I found new job and was forced to leave my comp, though I try to continue my work in blazor when I have free time.</p>
+<p>I managed to start work on blazor in June (when I left previous job) and was intensively learning and coding for whole month, this time gave me basic knowledge and good experience, in August I found new job and was forced to leave my PC, though I try to continue my work in blazor when I have free time.</p>
 
 
 <p>I have many ideas/plans but can't realize them because of lack of time and this situation will continue minimum for next months, this is why I ask for your donations, each 15$ will give me one more hour for experimenting with blazor.</p>
