--- a/BlazorApp1/_ViewImports.cshtml
+++ b/BlazorApp1/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 ﻿@using System.Net.Http
 @using Microsoft.AspNetCore.Blazor.Layouts
 @using Microsoft.AspNetCore.Blazor.Routing
+@using Microsoft.JSInterop
 @using BlazorApp1
 @using BlazorApp1.Shared
 
+@using Kendo.Blazor
+@addTagHelper *,Kendo.Blazor
