--- a/BlazorApp1/Pages/SharedWebWorkerPage.cshtml
+++ b/BlazorApp1/Pages/SharedWebWorkerPage.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<h3 style="color:darkred">This is Dedicated Web Worker sample</h3>
+<h3 style="color:darkred">This is Shared Web Worker sample</h3>
 <br />
 
 <h4>Web Worker helper library for blazor is available on <a href="https://www.nuget.org/packages/BlazorWebWorkerHelper/" target="_blank" class="ml-md-auto">nuget</a></h4>
