--- a/BlazorApp1/_ViewImports.cshtml
+++ b/BlazorApp1/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using Microsoft.JSInterop
 @using BlazorApp1
 @using BlazorApp1.Shared
+@using System.Text
 
 @using Kendo.Blazor
 @addTagHelper *,Kendo.Blazor
