--- a/BlazorApp1/Pages/DedicatedWebWorkerPage.cshtml
+++ b/BlazorApp1/Pages/DedicatedWebWorkerPage.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<h3 style="color:darkred">This is Shared Web Worker sample</h3>
+<h3 style="color:darkred">This is Dedicated Web Worker sample</h3>
 <br />
 
 
