--- a/BlazorApp1/Pages/WebSocketPage.cshtml
+++ b/BlazorApp1/Pages/WebSocketPage.cshtml
@@ -4,7 +4,7 @@
 @addTagHelper *, BlazorWebSocketHelper
 @using BlazorWebSocketHelper;
 @using BlazorWebSocketHelper.Classes;
-
+@using static BlazorWebSocketHelper.Classes.BwsEnums;
 
 <h3 style="color:darkred">This is Websocket sample</h3>
 <br />
@@ -32,11 +32,15 @@
 
 
 <br />
+<div style="vertical-align:middle;margin:5px">
+    <input type="radio" name="mode" value="1" style="margin:5px" disabled="@IsDisabled" checked="@(TransportCode == 0)" onchange="@(() => cmd_SetTransport(0))" /> Text
+    <input type="radio" name="mode" value="2" style="margin:5px" disabled="@IsDisabled" checked="@(TransportCode == 1)" onchange="@(() => cmd_SetTransport(1))" /> Array Buffer
 
+</div>
 <div style="margin:5px">
     <input style="margin:5px;width:250px" bind="@Ws_Message" disabled="@IsDisabled" />
     <button class="btn btn-primary" style="margin:5px" onclick="@WsSendMessage" disabled="@IsDisabled">Send</button>
-
+    <button class="btn btn-primary" style="margin:5px" onclick="@ClearLog">Clear log</button>
 </div>
 
 
@@ -46,7 +50,8 @@
 <span style="margin:5px">Log:</span>
 <br />
 
-@foreach (var item in WebSocketHelper1.Log)
+
+@foreach (var item in log.OrderByDescending(x => x.ID))
 {
     <br />
     <CompMessage bwsMessage="@item" parent="@this" />
@@ -58,121 +63,198 @@
 
 @functions
 {
+    protected int TransportCode = 0;
+
+    public bool IsDisabled = true;
+
+    //https://www.websocket.org/echo.html
+    public string Ws_URL = "ws://demos.kaazing.com/echo"; //"wss://echo.websocket.org"; // "ws://192.168.1.17:9000/Data/";
+
+    public WebSocketHelper WebSocketHelper1;
+
+    protected List<BwsMessage> log = new List<BwsMessage>();
+
+    protected string Ws_Button = "connect";
 
 
-public bool IsDisabled = true;
-
-//https://www.websocket.org/echo.html
-public string Ws_URL = "wss://echo.websocket.org"; // "ws://192.168.1.17:9000/Data/";
-
-protected WebSocketHelper WebSocketHelper1;
+    protected string Ws_Status = "undefined";
 
 
-
-protected string Ws_Button = "connect";
-
-
-protected string Ws_Status = "undefined";
+    protected string Ws_Message = "";
 
 
-protected string Ws_Message;
-
-
-protected override void OnInit()
-{
-    WsConnect();
-
-    base.OnInit();
-}
-
-public void WsOnStateChange(short par_state)
-{
-    Ws_Status = WebSocketHelper1.bwsState.ToString();
-
-    if (WebSocketHelper1.bwsState == BwsEnums.BwsState.Close)
+    protected override void OnInit()
     {
-        WebSocketHelper1.Dispose();
+        WsConnect();
+
+        base.OnInit();
     }
 
-
-    StateHasChanged();
-}
-
-
-public void WsOnError(string par_error)
-{
-
-    BwsJsInterop.Alert(par_error);
-}
-
-
-public void WsOnMessage(string par_message)
-{
-    StateHasChanged();
-}
-
-
-public void WsConnect()
-{
-
-
-    if (Ws_Button == "connect")
+    public void WsOnStateChange(short par_state)
     {
+        Ws_Status = WebSocketHelper1.bwsState.ToString();
 
-        WebSocketHelper1 = new WebSocketHelper(Ws_URL);
-
-        WebSocketHelper1.OnStateChange = WsOnStateChange;
-        WebSocketHelper1.OnMessage = WsOnMessage;
-        WebSocketHelper1.OnError = WsOnError;
-
-        IsDisabled = false;
-
-        Ws_Button = "disconnect";
-    }
-    else
-    {
-
-        WebSocketHelper1.Close();
-        IsDisabled = true;
-        Ws_Button = "connect";
-    }
-
-
-}
-
-
-
-
-
-public void WsSendMessage()
-{
-    if (WebSocketHelper1.bwsState == BwsEnums.BwsState.Open)
-    {
-        if (!string.IsNullOrEmpty(Ws_Message))
+        if (WebSocketHelper1.bwsState == BwsEnums.BwsState.Close)
         {
-            WebSocketHelper1.send(Ws_Message);
-            Ws_Message = string.Empty;
-            StateHasChanged();
+            WebSocketHelper1.Dispose();
+        }
+
+
+        StateHasChanged();
+    }
+
+
+    public void cmd_SetTransport(int Par_transportCode)
+    {
+        if (TransportCode != Par_transportCode)
+        {
+            TransportCode = Par_transportCode;
+
+            BwsTransportType b = (BwsTransportType)(TransportCode);
+
+
+            if (WebSocketHelper1.bwsTransportType != b)
+            {
+                WebSocketHelper1.SetTransportType(b);
+            };
+
+
+        }
+    }
+
+
+    public void WsOnError(string par_error)
+    {
+
+        BwsJsInterop.Alert(par_error);
+    }
+
+
+    public void WsOnMessage(BwsMessage par_message)
+    {
+        par_message.ID = GetNewIDFromLog();
+        log.Add(par_message);
+
+        StateHasChanged();
+    }
+
+
+    public void WsConnect()
+    {
+
+
+        if (Ws_Button == "connect")
+        {
+
+            WebSocketHelper1 = new WebSocketHelper(Ws_URL, (BwsEnums.BwsTransportType)(TransportCode));
+            WebSocketHelper1.DoLog = false;
+            WebSocketHelper1.OnStateChange = WsOnStateChange;
+            WebSocketHelper1.OnMessage = WsOnMessage;
+            WebSocketHelper1.OnError = WsOnError;
+
+            IsDisabled = false;
+            log = new List<BwsMessage>();
+            Ws_Button = "disconnect";
         }
         else
         {
-            BwsJsInterop.Alert("Please input message");
+
+            WebSocketHelper1.Close();
+            IsDisabled = true;
+            Ws_Button = "connect";
+            log = new List<BwsMessage>();
+        }
+
+
+    }
+
+
+
+
+
+    public void WsSendMessage()
+    {
+        if (WebSocketHelper1.bwsState == BwsEnums.BwsState.Open)
+        {
+            if (!string.IsNullOrEmpty(Ws_Message))
+            {
+
+
+                switch (WebSocketHelper1.bwsTransportType)
+                {
+                    case BwsEnums.BwsTransportType.Text:
+                        log.Add(new BwsMessage()
+                        {
+                            ID = GetNewIDFromLog(),
+                            Date = DateTime.Now,
+                            Message = Ws_Message,
+                            MessageType = BwsEnums.BwsMessageType.send,
+                            TransportType = WebSocketHelper1.bwsTransportType,
+                        });
+
+                        WebSocketHelper1.send(Ws_Message);
+                        break;
+                    case BwsEnums.BwsTransportType.ArrayBuffer:
+                        BwsMessage b = new BwsMessage()
+                        {
+                            ID = GetNewIDFromLog(),
+                            Date = DateTime.Now,
+                            MessageBinary = Encoding.UTF8.GetBytes(Ws_Message),
+                            MessageType = BwsEnums.BwsMessageType.send,
+                            TransportType = WebSocketHelper1.bwsTransportType,
+                        };
+                        log.Add(b);
+                        WebSocketHelper1.send(b.MessageBinary);
+                        break;
+                    case BwsEnums.BwsTransportType.Blob:
+                        break;
+                    default:
+                        break;
+                }
+
+                Ws_Message = string.Empty;
+                StateHasChanged();
+            }
+            else
+            {
+                BwsJsInterop.Alert("Please input message");
+            }
+        }
+        else
+        {
+            BwsJsInterop.Alert("Connection is closed");
         }
     }
-    else
+
+
+    private int GetNewIDFromLog()
     {
-        BwsJsInterop.Alert("Connection is closed");
+
+        if (log.Any())
+        {
+            return log.Max(x => x.ID) + 1;
+        }
+        else
+        {
+            return 1;
+        }
     }
-}
 
-public async void WsGetStatus()
-{
-    Ws_Status = await WebSocketHelper1.get_WsStatus();
-    BwsJsInterop.Alert(Ws_Status);
-    StateHasChanged();
-}
+    public async void WsGetStatus()
+    {
+        Ws_Status = await WebSocketHelper1.get_WsStatus();
+        BwsJsInterop.Alert(Ws_Status);
+        StateHasChanged();
+    }
 
-
+    public void ClearLog()
+    {
+        if (log.Any())
+        {
+            log = new List<BwsMessage>();
+            StateHasChanged();
+        }
+    }
 
 
 }
