--- a/BlazorApp1/_ViewImports.cshtml
+++ b/BlazorApp1/_ViewImports.cshtml
@@ -6,5 +6,8 @@
 @using BlazorApp1.Shared
 @using System.Text
 
+@using BlazorWindowHelper
+@using System.Reflection;
+
 @using Kendo.Blazor
 @addTagHelper *,Kendo.Blazor
