--- a/BlazorApp1/_ViewImports.cshtml
+++ b/BlazorApp1/_ViewImports.cshtml
@@ -9,5 +9,9 @@
 @using BlazorWindowHelper
 @using System.Reflection;
 
+
+@using BlazorWebWorkerHelper.WsClasses
+
+
 @using Kendo.Blazor
 @addTagHelper *,Kendo.Blazor
