--- a/BlazorApp1/Pages/Index.cshtml
+++ b/BlazorApp1/Pages/Index.cshtml
@@ -99,123 +99,127 @@
 
 
 
-@functions {
-
-
-//    bool IsPageLoaded = false;
+@functions {      //    bool IsPageLoaded = false;
 
 
 
-//    City Curr_City = new City();
+    //    City Curr_City = new City();
 
 
-//    List<City> Cities_List = new List<City>() {
-//new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=-5,
-//DivClass ="position:relative; width:400px; height:400px;"},
-//// new City() { ID=2, Name = "Tbilisi", WidthAndHeight = 400, TimeDiff=3},
-//// new City() { ID=3, Name = "London", WidthAndHeight = 400, TimeDiff=1},
-//};
+    //    List<City> Cities_List = new List<City>() {
+    //new City() { ID=1, Name = "New York", WidthAndHeight = 400, TimeDiff=-5,
+    //DivClass ="position:relative; width:400px; height:400px;"},
+    //// new City() { ID=2, Name = "Tbilisi", WidthAndHeight = 400, TimeDiff=3},
+    //// new City() { ID=3, Name = "London", WidthAndHeight = 400, TimeDiff=1},
+    //};
+
+
+    protected override void OnInit()
+    {
+
+        BlazorWindowHelper.Initialize();
+
+        base.OnInit();
+    }
+
+    void Add_Clock()
+    {
+        //if (Cities_List.Count == 5)
+        //{
+        //    JsInterop2.Alert("You can't add more than 5 clocks!");
+        //    return;
+        //}
+
+        //if (string.IsNullOrEmpty(Curr_City.Name))
+        //{
+        //    JsInterop2.Alert("City name is required!");
+        //}
+        //else
+        //{
 
 
 
-void Add_Clock()
-{
-    //if (Cities_List.Count == 5)
+        //    if (Cities_List.Any())
+        //    {
+        //        Curr_City.ID = Cities_List.Max(x => x.ID) + 1;
+        //    }
+        //    else
+        //    {
+        //        Curr_City.ID = 1;
+
+        //    }
+
+        //    if (Curr_City.WidthAndHeight == 0)
+        //    {
+        //        Curr_City.WidthAndHeight = 300;
+
+        //    }
+
+        //    Curr_City.DivClass = "position:relative; width:" + Curr_City.WidthAndHeight + "px; height:" + Curr_City.WidthAndHeight + "px;";
+
+
+        //    Cities_List.Add(Curr_City);
+        //    Curr_City = new City();
+
+
+        //    this.StateHasChanged();
+        //}
+    }
+
+
+    protected override void OnAfterRender()
+    {
+
+        //Console.WriteLine("       ------");
+        //Console.WriteLine("OnAfterRender");
+        //foreach (var item in Cities_List)
+        //{
+        //    item.component1_related.Canvas_ID = item.component1_related.Canvas_ID;
+        //    Console.WriteLine(item.Name + " " + item.component1_related.city.Name + " " + item.component1_related.Canvas_ID);
+        //}
+        //Console.WriteLine("       ------");
+
+        //foreach (City city in Cities_List.Where(x => x.component1_related.IsSubscribedForOnDelete == false))
+        //{
+
+        //    city.component1_related.onDelete += HandleOnDelete;
+        //    city.component1_related.IsSubscribedForOnDelete = true;
+        //}
+
+
+
+    }
+
+
+    //void RemoveComponent(int ID)
     //{
-    //    JsInterop2.Alert("You can't add more than 5 clocks!");
-    //    return;
+
+    //    RemoveCity(ID);
+
     //}
 
-    //if (string.IsNullOrEmpty(Curr_City.Name))
-    //{
-    //    JsInterop2.Alert("City name is required!");
-    //}
-    //else
+    //void RemoveCity(City c)
     //{
 
-
-
-    //    if (Cities_List.Any())
-    //    {
-    //        Curr_City.ID = Cities_List.Max(x => x.ID) + 1;
-    //    }
-    //    else
-    //    {
-    //        Curr_City.ID = 1;
-
-    //    }
-
-    //    if (Curr_City.WidthAndHeight == 0)
-    //    {
-    //        Curr_City.WidthAndHeight = 300;
-
-    //    }
-
-    //    Curr_City.DivClass = "position:relative; width:" + Curr_City.WidthAndHeight + "px; height:" + Curr_City.WidthAndHeight + "px;";
-
-
-    //    Cities_List.Add(Curr_City);
-    //    Curr_City = new City();
-
-
+    //    Cities_List.Remove(c);
     //    this.StateHasChanged();
+
     //}
-}
 
-
-protected override void OnAfterRender()
-{
-
-    //Console.WriteLine("       ------");
-    //Console.WriteLine("OnAfterRender");
-    //foreach (var item in Cities_List)
-    //{
-    //    item.component1_related.Canvas_ID = item.component1_related.Canvas_ID;
-    //    Console.WriteLine(item.Name + " " + item.component1_related.city.Name + " " + item.component1_related.Canvas_ID);
-    //}
-    //Console.WriteLine("       ------");
-
-    //foreach (City city in Cities_List.Where(x => x.component1_related.IsSubscribedForOnDelete == false))
+    //void RemoveCity(int ID)
     //{
 
-    //    city.component1_related.onDelete += HandleOnDelete;
-    //    city.component1_related.IsSubscribedForOnDelete = true;
+    //    City c = Cities_List.Single(X => X.ID == ID);
+
+    //    RemoveCity(c);
+
     //}
 
 
-
-}
-
-
-//void RemoveComponent(int ID)
-//{
-
-//    RemoveCity(ID);
-
-//}
-
-//void RemoveCity(City c)
-//{
-
-//    Cities_List.Remove(c);
-//    this.StateHasChanged();
-
-//}
-
-//void RemoveCity(int ID)
-//{
-
-//    City c = Cities_List.Single(X => X.ID == ID);
-
-//    RemoveCity(c);
-
-//}
-
-
-//void HandleOnDelete(object sender, EventArgs e)
-//{
-//    RemoveCity(((Component1)sender).city.ID);
-//}
+    //void HandleOnDelete(object sender, EventArgs e)
+    //{
+    //    RemoveCity(((Component1)sender).city.ID);
+    //}
 
 
 
