--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -57,11 +57,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Password Pattern
             </NavLink>
         </li>
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="TreeViewPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Tree View
             </NavLink>
-        </li>
+        </li>*@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="WebSocketPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> WebSocket sample
@@ -82,6 +82,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Shared Web Worker 2
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="SwwWsPage">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> SWW + Web Socket
+            </NavLink>
+        </li>
+        
         @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="RawHTML">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
