--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -9,7 +9,7 @@
     <ul class="nav flex-column">
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="" Match=NavLinkMatch.All>
-                <span class="oi oi-home" aria-hidden="true"></span> Clock SVG
+                <span class="oi oi-plus" aria-hidden="true"></span> Clock SVG
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -57,11 +57,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Password Pattern
             </NavLink>
         </li>
-        @*<li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="TreeViewPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Tree View
             </NavLink>
-        </li>*@
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="WebSocketPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> WebSocket sample
@@ -87,12 +87,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> SWW + Web Socket
             </NavLink>
         </li>
-        
-        @*<li class="nav-item px-3">
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="PerformanceChartPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Performance Chart
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="RawHTML">
                 <span class="oi oi-plus" aria-hidden="true"></span> Raw HTML
             </NavLink>
-        </li>*@
+        </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="DonationPage">
                 <span class="oi oi-plus" aria-hidden="true"></span> Donation
