--- a/BlazorApp1/Shared/NavMenu.cshtml
+++ b/BlazorApp1/Shared/NavMenu.cshtml
@@ -18,7 +18,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ChessPage">
+            <NavLink class="nav-link" href="https://lupblazorchess.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Game Chess
             </NavLink>
         </li>
@@ -38,7 +38,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="CalculatorPage">
+            <NavLink class="nav-link" href="https://lupblazorcalculator.z20.web.core.windows.net/">
                 <span class="oi oi-plus" aria-hidden="true"></span> Calculator
             </NavLink>
         </li>
@@ -48,8 +48,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ExcelPage">
-                <span class="oi oi-plus" aria-hidden="true"></span> Excel
+            <NavLink class="nav-link" href="SpreadsheetPage">
+                <span class="oi oi-plus" aria-hidden="true"></span> Spreadsheet
             </NavLink>
         </li>
         <li class="nav-item px-3">
